--- a/ReduxSaga/package.json
+++ b/ReduxSaga/package.json
@@ -10,10 +10,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "jetifier": "^1.6.5",
+    "native-base": "^2.13.12",
     "react": "16.11.0",
     "react-native": "0.62.2",
-    "redux": "^4.0.5",
     "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
     "redux-saga": "^1.1.3"
   },
   "devDependencies": {
